logos/tests/snapshots/poly_infer_test__infer_poly_typing_107.snap
---
source: tests/poly_infer_test.rs
expression: "&result"
---
|- fun x -> x : 'a -> 'a by T-Abs {
    x: 'a |- x : 'a by T-Var {
    };
};
